refactor: Migrate from String.format to "".formatted