@@ -54,7 +54,7 @@ public interface FileSystemReader {
                 return Files.readSymbolicLink(link);
             } catch (IOException e) {
                 throw new SymlyExecutionException(
-                        String.format("Unable to read link %s real path: %s", link, e.getMessage()), e);
+                        "Unable to read link %s real path: %s".formatted(link, e.getMessage()), e);
             }
         }
 
